[FIX] Image position on mobile version

--- a/src/components/Body/Home/home.module.scss
+++ b/src/components/Body/Home/home.module.scss
@@ -82,7 +82,7 @@
 
 @media only screen and (max-width: 450px) {
   .img {
-    margin-top: 50px;
+    margin-top: 0px;
   }
   .name {
     margin-top: 15px;
